fixed collapsable

--- a/src/scss/layout/_form-cards.scss
+++ b/src/scss/layout/_form-cards.scss
@@ -137,3 +137,6 @@
       margin: 30px auto;
     }
 }
+.hidden {
+  display: none;
+}
